Header should be aligned right

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -334,7 +334,7 @@ nav {
    ========================================================================== */
 .header {
   padding: 100px 0 100px;
-  text-align: center;
+  text-align: right;
 }
 .logo-name {
   margin-bottom: 0;
