--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -1,6 +1,13 @@
 <h2 class="section-title">{{ .titles.contact }}</h2>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis ducimus neque amet corrupti ex temporibus similique.</p>
+<ul class="contact-list">
+    {{ range $contact_text := .contact }}
+    <p>
+      {{ .text }}
+    </p>
+    {{ end }}
+</ul>
+
 <form method="post" action="contact.php" id="form" class="form">
   <div class="control-group control-group-name">
     <label for="name">Name</label>
