--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,3 +1,4 @@
 <footer class="footer">
-    <p> &copy; 2018 Lower Sherwood Farm. All Rights Reserved. Powered by <a href="https://gohugo.io" target="_blank">Hugo</a>, the <a href="https://github.com/sherwoodstock/hugo-conference" target="_blank">Hugo Conferenc</a> theme, and <a href="https://www.netlify.com" target="_blank">Netlify</a>.
+    <br>
+    <p>&copy; 2018 Lower Sherwood Farm. All Rights Reserved. Powered by <a href="https://gohugo.io" target="_blank">Hugo</a>, the <a href="https://github.com/sherwoodstock/hugo-conference" target="_blank">Hugo Conference</a> theme, and <a href="https://www.netlify.com" target="_blank">Netlify</a>.
 </footer>
