404 page has a 'back' link

--- a/layouts/partials/404.html
+++ b/layouts/partials/404.html
@@ -3,5 +3,7 @@
 <ul class="not-found-list">
     <p>
         This page wasn't found.
+        <br>
+        <a href="javascript:history.back()">Return to the previous page.</a>
     </p>
 </ul>
