Netlify tags for contact form

--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -8,7 +8,7 @@
     {{ end }}
 </ul>
 
-<form name="form" id="form" class="form">
+<form name="contact" id="form" class="form" data-netlify="true">
   <div class="control-group control-group-email">
   <input type="email" name="email" id="email" placeholder="Enter email...">
   </div>
