Testing mailblast.io integration

--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -8,9 +8,44 @@
     {{ end }}
 </ul>
 
-<form name="contact" id="form" class="form" data-netlify="true">
-  <div class="control-group control-group-email">
-  <input type="email" name="email" id="email" placeholder="Enter email...">
-  </div>
-  <input class="btn btn-send" type="submit" value="Send">
-</form>
+<!--Start Mailblast Signup Form-->
+<div class="mb-embed">
+  <link rel="stylesheet" media="screen" href="https://cdn.mailblast.io/stylesheets/mb-embed-1-2.css">
+  <style type="text/css">
+    /* Add any css overrides you require here */
+  </style>
+
+  <!-- You can customize the default success message here -->
+  <h2 class="mb-message mb-success-message" default-message="Thank you for Subscribing!"></h2>
+  <h2 class="mb-message mb-error-message"></h2>
+
+  <form method="post" action="https://mailblast.io/lists/67b9711c-cef5-44ff-a206-7de050cbbe16/subscribers/create_external" class="mb-form" novalidate="novalidate">
+
+    <div class="mb-form-group">
+      <label>Email Address (required)</label>
+      <input type="email" name="subscriber[email]" class="mb-email" required="" aria-required="true">
+    </div>
+
+    <div class="mb-form-group">
+      <label class="mb-name">First Name</label>
+      <input type="text" name="subscriber[first_name]" class="mb-name mb-first-name">
+    </div>
+
+    <div class="mb-form-group">
+      <label class="mb-name">Last Name</label>
+      <input type="text" name="subscriber[last_name]" class="mb-name mb-last-name">
+    </div>
+
+    <div class="mb-form-group-tk" aria-hidden="true">
+      <input type="text" name="mb_67b9711ccef544ffa2067de050cbbe16" tabindex="-1" value="">
+    </div>
+
+    <div class="mb-form-group mb-subscribe">
+
+      <button type="submit" class="btn btn-send">Subscribe</button>
+    </div>
+  </form>
+  <script src="https://cdn.mailblast.io/javascripts/mb-embed-1-2.js"></script>
+</div>
+<!--End Mailblast Signup Form-->
+
