Mailblast.io messages should be p not h2

--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -16,8 +16,8 @@
   </style>
 
   <!-- You can customize the default success message here -->
-  <h2 class="mb-message mb-success-message" default-message="Thank you for Subscribing!"></h2>
-  <h2 class="mb-message mb-error-message"></h2>
+  <p class="mb-message mb-success-message" default-message="Thank you for subscribing!"></p>
+  <p class="mb-message mb-error-message"></p>
 
   <form method="post" action="https://mailblast.io/lists/67b9711c-cef5-44ff-a206-7de050cbbe16/subscribers/create_external" class="mb-form" novalidate="novalidate">
 
