Minor css alteration

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -841,7 +841,7 @@ nav {
    ========================================================================== */
 .schedule {
   background: #ffffff;
-  border: 1px solid #ccc;
+  border: 1px solid #e7e7e7;
   border-radius: 4px;
 }
 .schedule-tbl {
