--- a/layouts/partials/bottom.html
+++ b/layouts/partials/bottom.html
@@ -1,9 +1,11 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>                           
 <script>window.jQuery || document.write('<script src="/js/jquery.js"><\/script>')</script>
-{{ if isset .Site.Params "address" }}
-<script src="https://maps.google.com/maps/api/js?libraries=places&key={{ .Site.Params.GoogleMapsAPIKey }}"></script    >
+<!--{{ if isset .Site.Params "address" }}
+<script src="https://maps.google.com/maps/api/js?libraries=places&key={{ .Site.Params.GoogleMapsAPIKey }}"></script>-->
 <script src="/js/main.js"></script>
-{{ end }}
+<script src="/js/autocomplete.js"></script>
+<script src="/js/map.js"></script>
+<!--{{ end }}-->
 {{ template "_internal/google_analytics_async.html" . }}
 </body>
 </html> 
