--- a/static/css/main.css
+++ b/static/css/main.css
@@ -440,6 +440,31 @@ nav {
 .speakers-item p {
   font-size: 1.4em;
 }
+
+/* registration table */
+.registraton-tbl {
+  padding: 20px;
+}
+
+.registration-tbl table {
+  border-collapse: collapse; 
+  font-size: 1em;
+}
+.registration-tbl td,
+.registration-tbl th {
+  position: relative;
+  padding: 20px 30px;
+  font-size: 1.4em;
+  line-height: 1.4em;
+  text-align: left;
+}
+.registration-tbl th {
+  padding: 5px 30px;
+  color: #2b2b2b;
+  font-size: 2em;
+  font-weight: bolder;
+}
+
 /* =============================================================================
    SCHEDULE
    ========================================================================== */
@@ -601,6 +626,19 @@ nav {
   }
   .schedule-tbl td.schedule-description {
     font-size: 12px;
+  }
+
+  /* registration */
+  .registration-tbl {
+    padding: 1px;
+  }
+  .registration-tbl td,
+  .registration-tbl th {
+    padding: 10px;
+  }
+  .registration-tbl th {
+    padding: 10px;
+    font-size: 1.8em;
   }
   /* partners */
   .sponsor-item,
@@ -805,9 +843,9 @@ nav {
 }
 /* Register */
 .register {
-    border: 1px solid #e7e7e7;
-    background: #fff;
-    border-radius: 4px;
+  border: 1px solid #e7e7e7;
+  background: #fff;
+  border-radius: 4px;
 }
 /* =============================================================================
    ABOUT
@@ -851,6 +889,38 @@ nav {
   background: #2b2b2b;
   border-radius: 8px;
 }
+
+/* =============================================================================
+   REGISTRATION
+   ========================================================================== */
+.registration {
+  background: #ffffff;
+  border: 1px solid #e7e7e7;
+  border-radius: 4px;
+}
+.registration-tbl {
+  background: #fff;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.15);
+}
+.registration-tbl table {
+  background: #fff;
+}
+.registration-tbl td,
+.registration-tbl th {
+  border-bottom: 1px solid #e7e7e7;
+}
+.registration-tbl tbody tr:nth-child(2n+1) {
+  background: #f6f6f6;
+}
+.registration-tbl th {
+  color: #2b2b2b;
+}
+.registration-tbl tbody tr:hover {
+  background: #fffde1;
+}
+
 /* =============================================================================
    SCHEDULE
    ========================================================================== */
