Updating to add snipcart

--- a/layouts/partials/bottom.html
+++ b/layouts/partials/bottom.html
@@ -6,6 +6,12 @@
 <script src="/js/autocomplete.js"></script>
 <script src="/js/map.js"></script>
 {{ end }}
+
+{{ if isset .Site.Params "snipcartapikey" }}
+<script src="https://cdn.snipcart.com/scripts/2.0/snipcart.js" id="snipcart" data-api-key="{{ .Site.Params.SnipCartAPIKey }}" data-autopop="false" data-cart-custom1-name="ILR Number"></script>
+
+<link href="https://cdn.snipcart.com/themes/2.0/base/snipcart.min.css" type="text/css" rel="stylesheet" />
+{{ end }}
 {{ template "_internal/google_analytics_async.html" . }}
 </body>
-</html> 
+</html>
