--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -20,30 +20,44 @@
   <p class="mb-message mb-error-message"></p>
 
   <form method="post" action="https://mailblast.io/lists/67b9711c-cef5-44ff-a206-7de050cbbe16/subscribers/create_external" class="mb-form" novalidate="novalidate">
+    <div class="contact-tbl">
+    <table>
+      <tr>
+        <th>
+          Email Address (required):
+        </th>
+        <td colspan=2>
+          <input type="email" name="subscriber[email]" class="mb-email" required="" aria-required="true">
+        </td>
+      </tr>
 
-    <div class="mb-form-group">
-      <label>Email Address (required)</label>
-      <input type="email" name="subscriber[email]" class="mb-email" required="" aria-required="true">
-    </div>
+      <tr>
+        <th>
+          First Name:
+        </th>
+        <td colspan=2>
+          <input type="text" name="subscriber[first_name]" class="mb-name mb-first-name">
+        </td>
+      </tr>
 
-    <div class="mb-form-group">
-      <label class="mb-name">First Name</label>
-      <input type="text" name="subscriber[first_name]" class="mb-name mb-first-name">
-    </div>
+      <tr>
+        <th>
+          Last Name:
+        </th>
+        <td colspan=2>
+          <input type="text" name="subscriber[last_name]" class="mb-name mb-last-name">
+        </td>
+      </tr>
 
-    <div class="mb-form-group">
-      <label class="mb-name">Last Name</label>
-      <input type="text" name="subscriber[last_name]" class="mb-name mb-last-name">
-    </div>
-
-    <div class="mb-form-group-tk" aria-hidden="true">
       <input type="text" name="mb_67b9711ccef544ffa2067de050cbbe16" tabindex="-1" value="">
-    </div>
 
-    <div class="mb-form-group mb-subscribe">
-      <button type="submit" class="btn btn-send">Subscribe</button>
+      <tr>
+        <td colspan=3>
+          <button type="submit" class="btn btn-send">Subscribe</button>
+        </td>
+      </tr>
+    </table>
     </div>
-
   </form>
   <script src="https://cdn.mailblast.io/javascripts/mb-embed-1-2.js"></script>
 </div>
