Switch h1-h5 to be Caveat

--- a/layouts/partials/bottom.html
+++ b/layouts/partials/bottom.html
@@ -11,6 +11,7 @@
 <script src="https://cdn.snipcart.com/scripts/2.0/snipcart.js" id="snipcart" data-api-key="{{ .Site.Params.SnipCartAPIKey }}" data-autopop="false" data-cart-custom1-name="ILR Number"></script>
 
 <link href="https://cdn.snipcart.com/themes/2.0/base/snipcart.min.css" type="text/css" rel="stylesheet" />
+<link href="https://fonts.googleapis.com/css?family=Caveat" rel="stylesheet">
 {{ end }}
 {{ template "_internal/google_analytics_async.html" . }}
 </body>
