--- a/static/css/main.css
+++ b/static/css/main.css
@@ -779,6 +779,7 @@ h4,
 h5,
 h6 {
   color: #2b2b2b;
+  font-family: 'Caveat', cursive;
 }
 /* =============================================================================
    NAVIGATION
