--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -6,20 +6,15 @@
       {{ .text }}
     </p>
     {{ end }}
-</ul>
 
 <!--Start Mailblast Signup Form-->
-<div class="mb-embed">
   <link rel="stylesheet" media="screen" href="https://cdn.mailblast.io/stylesheets/mb-embed-1-2.css">
-  <style type="text/css">
-    /* Add any css overrides you require here */
-  </style>
 
   <!-- You can customize the default success message here -->
   <p class="mb-message mb-success-message" default-message="Thank you for subscribing!"></p>
   <p class="mb-message mb-error-message"></p>
 
-  <form method="post" action="https://mailblast.io/lists/67b9711c-cef5-44ff-a206-7de050cbbe16/subscribers/create_external" class="mb-form" novalidate="novalidate">
+  <form method="post" action="https://mailblast.io/lists/67b9711c-cef5-44ff-a206-7de050cbbe16/subscribers/create_external" class="form" novalidate="novalidate">
     <div class="contact-tbl">
     <table>
       <tr>
@@ -49,10 +44,11 @@
         </td>
       </tr>
 
-      <input type="text" name="mb_67b9711ccef544ffa2067de050cbbe16" tabindex="-1" value="">
-
       <tr>
-        <td colspan=3>
+        <td colspan=2>
+          <input type="text" name="mb_67b9711ccef544ffa2067de050cbbe16" tabindex="-1" value="">
+        </td>
+        <td>
           <button type="submit" class="btn btn-send">Subscribe</button>
         </td>
       </tr>
@@ -60,6 +56,5 @@
     </div>
   </form>
   <script src="https://cdn.mailblast.io/javascripts/mb-embed-1-2.js"></script>
-</div>
+</ul>
 <!--End Mailblast Signup Form-->
-
