Updating style sheet

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -465,8 +465,8 @@ nav {
 .contact-tbl th {
   padding: 5px 30px;
   color: #2b2b2b;
-  font-size: 2em;
-  font-weight: bolder;
+  font-size: 1.8em;
+  font-weight: bold;
 }
 
 /* =============================================================================
@@ -772,7 +772,10 @@ html {
 /* =============================================================================
    BASIC STYLES
    ========================================================================== */
-h1,
+
+h1 {
+  color: #2b2b2b;
+}
 h2,
 h3,
 h4,
