Adding manifest file

--- a/layouts/partials/top.html
+++ b/layouts/partials/top.html
@@ -19,6 +19,8 @@
   <link rel="stylesheet" type="text/css" href="/css/main.css">
   <link rel="stylesheet" type="text/css" href="/css/form.css">
 
+  <link rel="manifest" href="{{ "site.webmanifest" | relURL }}">
+
 </head>
 <body>
   <div class="global">
