Minor change to registration form

--- a/layouts/partials/register.html
+++ b/layouts/partials/register.html
@@ -73,7 +73,7 @@
           <!-- End of geolocation -->
           <tr>
             <td colspan="4">
-              <a href="#" class="btn snipcart-checkout">Finish Registration</a>
+              <a href="#" class="btn snipcart-checkout">Finish Payment</a>
             </td>
           </tr>
         </table>
