--- a/layouts/partials/top.html
+++ b/layouts/partials/top.html
@@ -21,6 +21,8 @@
 
   <link rel="manifest" href="{{ "site.webmanifest" | relURL }}">
 
+  <script src="https://use.fontawesome.com/165033574b.js"></script>
+
 </head>
 <body>
   <div class="global">
