--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" media="screen" href="https://cdn.mailblast.io/stylesheets/mb-embed-1-2.css">
   <style type="text/css">
     /* Add any css overrides you require here */
-  .mb-embed .mb-form-group .mb-subscribe {transition-timing-function: ease-out; background-color: #fddd52; text-align: left; height: auto; transition-duration: 0.3s; color: #2b2b2b; border-radius: 40px; font-size: 18px; padding-bottom: 15px; padding-left: 30px; padding-right: 30px; padding-top: 15px; border-collapse: collapse; margin-bottom: 50px; margin-left: 0px; margin-right: 0px; margin-top: 0px; top: -5px; line-height: 18px; display: inline-block;}
+.mb-embed .mb-form-group .mb-subscribe {transition-timing-function: ease-out; background-color: #fddd52; text-align: left; height: auto; transition-duration: 0.3s; color: #2b2b2b; border-radius: 40px; font-size: 18px; padding-bottom: 15px; padding-left: 30px; padding-right: 30px; padding-top: 15px; border-collapse: collapse; margin-bottom: 15px; margin-left: 0px; margin-right: 0px; margin-top: 15px; top: -5px; line-height: 18px; display: inline-block; position: relative;}
   </style>
 
   <!-- You can customize the default success message here -->
