--- a/layouts/partials/sponsors.html
+++ b/layouts/partials/sponsors.html
@@ -3,7 +3,7 @@
 <ul class="sponsors-list">
 {{ range $sponsor := .sponsors }}
   <li class="sponsor-item" itemscope itemtype="http://schema.org/Organization">
-    <a href="{{ .url }}" class="sponsor--link" itemprop="url" target="_blank">
+    <a href="{{ .url }}" class="sponsor-link" itemprop="url" target="_blank">
       <img src="{{ .logo }}" alt="{{ .name }}" class="photo" itemprop="image">
     </a>
   </li>
