--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,3 +1,14 @@
 <footer class="footer">
-    <p align="center">&copy; 2018 Lower Sherwood Farm. All Rights Reserved. Powered by <a href="https://gohugo.io" target="_blank">Hugo</a>, the <a href="https://github.com/sherwoodstock/hugo-conference" target="_blank">Hugo Conference</a> theme, and <a href="https://www.netlify.com" target="_blank">Netlify</a>.</p>
+    <p align="center">&copy; 2018 Lower Sherwood Farm. All Rights Reserved. Powered by <a href="https://gohugo.io" target="_blank">Hugo</a>, the <a href="https://github.com/sherwoodstock/hugo-conference" target="_blank">Hugo Conference</a> theme, and <a href="https://www.netlify.com" target="_blank">Netlify</a>.<br>
+    {{ range $social := $.Site.Params.Social}}
+      {{ if ne $social.url nil }}
+      <span class="fa-stack fa-lg">
+        <a href="{{ $social.url }}" target="_blank">
+        <i class="fa fa-square fa-stack-2x"></i>
+        <i class="fa fa-{{ $social.network }} fa-stack-1x fa-inverse"></i>
+        </a>
+      </span>
+      {{ end }}
+    {{ end }}
+  </p>
 </footer>
