Buttons are now right-aligned

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -611,7 +611,8 @@ nav {
   height: 300px;
 }
 .form .btn,
-.button {
+.button,
+.btn {
   float: right;
 }
 /* =============================================================================
