--- a/layouts/partials/sponsors.html
+++ b/layouts/partials/sponsors.html
@@ -1,11 +1,13 @@
 <h2 class="section-title">{{ .titles.sponsors }}</h2>
 
-<ul class="sponsors-list">
-{{ range $sponsor := .sponsors }}
-  <li class="sponsor-item" itemscope itemtype="http://schema.org/Organization">
-    <a href="{{ .url }}" class="sponsor-link" itemprop="url" target="_blank">
-      <img src="{{ .logo }}" alt="{{ .name }}" class="photo" itemprop="image">
-    </a>
-  </li>
-{{ end }}
+<ul class="sponsor-list">
+  <table class=>
+    <tr>
+    {{ range $sponsor := .sponsors }}
+    <td>
+        <p><a href="{{ .url }}" target="_blank" class="sponsor-link" itemprop="url"><img src="{{ .logo }}" alt="{{ .name }}" class="photo" itemprop="image"></a><br>{{ .name }}</p>
+    </td>
+    {{ end }}
+</tr>
+</table>
 </ul>
